Fix for initial back arrow visibility and vertical align

--- a/projects/ngx-neo-components/styles/_main.scss
+++ b/projects/ngx-neo-components/styles/_main.scss
@@ -64,7 +64,7 @@ neo-list-item:hover {
   background-color: #f8f9fa;
 }
 
-neo-undo{
+neo-undo {
   z-index: 500;
 }
 
@@ -103,6 +103,12 @@ neo-undo{
   z-index: 2;
 }
 
+.return-arrow {
+  i {
+    vertical-align: text-bottom;
+  }
+}
+
 .mobile-sidebar {
   position: fixed;
   top: 0;
@@ -111,15 +117,15 @@ neo-undo{
   z-index: 1001;
   bottom: 0;
   background: #f5f5f5;
-  max-width:300px;
+  max-width: 300px;
 }
 
 .mobile-sidebar.mobile-sidebar-transition {
-  transition: all 0.3s ease-in-out;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
+  transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
 }
 
 .mobile-sidebar-backdrop {
@@ -182,8 +188,7 @@ neo-undo{
 }
 
 .bell-container {
-  margin: -10px;
-  margin-left: -5px;
+  margin: -10px -10px -10px -5px;
   padding: 10px;
   border-radius: 50%;
 }
